--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<form class="col s12">
 				<div class="row">
         <div class="input-field col s6">
-          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+          <input placeholder="Enter your number here" id="first_name" type="text" class="validate">
           <label for="first_name">CollatzConjecture</label>
         </div>
       </div>
